--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--for internet expolorer-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>Code Quiz</title>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
   </head>
   <body>
+      <header>
+        <a href="/">View high scores</a>
+        <p class="timer">Timer</p>
+      </header>
+
+    <!--keep your js at the bottom of your body so everything else loads first-->
     <script src="./assets/js/quiz.js"></script>
   </body>
 </html>
