initial header setup

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--for internet expolorer-->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Code Quiz</title>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
-  </head>
-  <body>
-      <header>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
+
+<body>
+    <header>
         <a href="/">View high scores</a>
         <p class="timer">Timer</p>
-      </header>
+    </header>
 
-    <!--keep your js at the bottom of your body so everything else loads first-->
-    <script src="./assets/js/quiz.js"></script>
-  </body>
+    <link rel="javascript" href="./assets/js/quiz.js" />    
+</body>
+
 </html>
