initial quiz section setup

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <p class="timer">Timer</p>
     </header>
 
+    <section class="quiz-wrapper">
+        <h1 class="prompt">Coding Quiz Challenge</h1>
+        <p class="description">Try to answer the following code-related questionis within the time limit. Keep in mind that
+            incorrect answers will penalize your score/time by ten seconds!
+        </p>
+        <button class="start" type="button">Start Quiz</button>
+    </section>
+
     <link rel="javascript" href="./assets/js/quiz.js" />    
 </body>
 
