--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <p class="description">Try to answer the following code-related questionis within the time limit. Keep in mind that
             incorrect answers will penalize your score/time by ten seconds!
         </p>
-        <button class="start" type="button">Start Quiz</button>
+        <button class="btn" id="start-quiz" type="button">Start Quiz</button>
     </section>
 
-    <link rel="javascript" href="./assets/js/quiz.js" />    
+    <!--script tag at the bottom of the body so everything else loads first-->
+    <script src="./assets/js/quiz.js"></script>    
 </body>
 
 </html>
