--- a/index.html
+++ b/index.html
@@ -11,16 +11,31 @@
 
 <body>
     <header>
-        <a href="/">View high scores</a>
-        <p class="timer">Timer</p>
+        <a href="scoreboard.html">View high scores</a>
+        <p class="timer">Timer: <span id="time">0</span></p>
     </header>
 
     <section class="quiz-wrapper">
-        <h1 class="prompt">Coding Quiz Challenge</h1>
-        <p class="description">Try to answer the following code-related questionis within the time limit. Keep in mind that
-            incorrect answers will penalize your score/time by ten seconds!
-        </p>
-        <button class="btn" id="start-quiz" type="button">Start Quiz</button>
+        <div id="start-screen">
+            <h1 id="prompt">Coding Quiz Challenge</h1>
+            <p id="description">Try to answer the following code-related questionis within the time limit. Keep in mind that
+                    incorrect answers will penalize your score/time by ten seconds!
+            </p>
+            <button class="btn" id="start-quiz" type="button">Start Quiz</button>
+        </div>
+
+        <div id="quiz-screen" class="hide">
+            <h2 id="question"></h2>
+            <div id="answers"></div>
+        </div>
+
+        <div id="end-screen" class="hide">
+            <h2>Thanks for playing!</h2>
+            <p>Your final score is <span id="final-score"></span>.</p>
+            <p>Your initials: <input id="initials" type="text" max="3"/>
+                <button id="submit">Submit</button>
+            </p>
+        </div>
     </section>
 
     <!--script tag at the bottom of the body so everything else loads first-->
