start quiz button functionality

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div id="quiz-screen" class="hide">
             <h2 id="question"></h2>
-            <div id="answers"></div>
+            <div id="options"></div>
         </div>
 
         <div id="end-screen" class="hide">
