--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="start-screen">
             <h1 id="prompt">Coding Quiz Challenge</h1>
             <p id="description">Try to answer the following code-related questionis within the time limit. Keep in mind that
-                    incorrect answers will penalize your score/time by ten seconds!
+                    incorrect answers will penalize your score/time by ten seconds, and you only get one shot per answer!
             </p>
             <button class="btn" id="start-quiz" type="button">Start Quiz</button>
         </div>
@@ -28,6 +28,8 @@
             <h2 id="question"></h2>
             <div id="options"></div>
         </div>
+
+        <div id="hint" class="hint"></div>
 
         <div id="end-screen" class="hide">
             <h2>Thanks for playing!</h2>
