working on scoreboard functionality

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -16,4 +16,5 @@
         </ol>
     </div>
     <script src="./assets/js/scoreboard.js"></script>
+    <script src= "./assets/js/quiz.js"></script>
 </body>
