scoreboard functionality in works

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <a href="scoreboard.html">View high scores</a>
+        <a href="./scoreboard.html">View high scores</a>
         <p class="timer">Timer: <span id="time">0</span></p>
     </header>
 
@@ -35,7 +35,9 @@
             <h2>Thanks for playing!</h2>
             <p>Your final score is <span id="final-score"></span>.</p>
             <p>Your initials: <input id="initials" type="text" max="3"/>
-                <button id="submit">Submit</button>
+                <button class="btn" id="submit" type="button">
+                    Submit
+                </button>
             </p>
         </div>
     </section>
